change backend structure to make it ready for batching
