# source/backend/app.py
@@ -3,13 +3,13 @@ import config
 import create_app
 from camunda.client import CamundaClient
 from rest.instance_router import instance_router_api
-from rest.learning_policy import learning_policy_api
-from rest.processes import process_variants_api
+from rest.batch_policy import batch_policy_api
+from rest.process import process_api
 
 app = create_app.create_app()
 
-app.register_blueprint(learning_policy_api, url_prefix="/learning-policy")
-app.register_blueprint(process_variants_api, url_prefix="/process-variants")
+app.register_blueprint(batch_policy_api, url_prefix="/batch-policy")
+app.register_blueprint(process_api, url_prefix="/process")
 app.register_blueprint(instance_router_api, url_prefix="/instance-router")
 
 SWAGGER_URL = "/swagger"
